# bitrate_paper

./: .gitignore  Justfile  Makefile  one_step.rs  pyproject.toml
design/: superposition.afdesign
latex/: capacity_paper.bib  main.tex  preamble.tex
latex/content/: 0_abstract.tex  100_binomial.tex  100_bp.tex  100_chernoff.tex  100_information.tex  100_interference_figure.tex  100_matched.tex  100_proofs.tex  1_introduction.tex  2_codes.tex  3_information.tex  4_random_results.tex  5_dictionaries.tex  6_conclusion.tex
nb/: matched.py
project/: interference.py  matched_pursuit.py  misc.py  one_step.py  pursuit.py  pursuit_runner.py  symbol_transmission.py
project/graphs/: basis_pursuit.py  capacity.py  interference.py  matched_pursuit.py  one_step.py  pursuit.py  settings.py  storyline.py  symbol.py  top_k.py
results/: README.md  gd_interference.csv  lasso_2.csv  lasso_decode.csv  linear_decode.csv  matched.csv  matched_1048576.csv  matched_256.csv  matched_4096.csv  matched_65536.csv  mp_large.csv  one_step_high.csv  one_step_low.csv  symbol_transmission.csv  thing.csv  top_k.csv
